missing the beeping

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     <title>Countdown timer</title>
   </head>
   <body>
+    <!-- TESTS -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"> </script>
+    <!-- TESTS -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
