--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Font awesome -->
+
+    <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +37,7 @@
   </head>
   <body>
     <!-- TESTS -->
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"> </script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"> </script> -->
     <!-- TESTS -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
